<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.UserDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorOnPrimary"
                app:layout_collapseMode="none"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_detail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pale_orange">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunitosans_extrabold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_item_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunitosans_regular"
                    android:text="@string/username"
                    app:drawableLeftCompat="@drawable/ic_baseline_asperand"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

                <TextView
                    android:id="@+id/tv_follower_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/nunitosans_bold"
                    android:textColor="@color/black"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

                <TextView
                    android:id="@+id/tv_following_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunitosans_bold"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.108"
                    app:layout_constraintStart_toEndOf="@+id/tv_follower_number"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/follow_button"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_follower_number"
                    app:layout_goneMarginTop="10dp" />

                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_baseline_share"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/btn_follow"
                    app:layout_constraintTop_toBottomOf="@+id/tv_following_number"
                    app:tint="@color/blue"
                    android:backgroundTint="@color/pale_orange"
                    android:contentDescription="@string/share"/>

                <TextView
                    android:id="@+id/tv_item_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunitosans_regular"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:maxLines="5"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_company"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
                    tools:text="@string/company_name"
                    app:drawableTint="@color/black" />

                <TextView
                    android:id="@+id/tv_item_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunitosans_regular"
                    android:gravity="center"
                    android:maxLines="5"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_company"
                    tools:text="@string/location"
                    app:drawableTint="@color/black"/>

                <TextView
                    android:id="@+id/tv_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/nunitosans_regular"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_repositories"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_location"
                    tools:text="@string/repositories"
                    app:drawableTint="@color/black"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="?attr/colorSurface"
                    android:contentDescription="@string/tab_layout_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_repositories"
                    app:layout_constraintVertical_bias="0.0"
                    app:tabTextColor="@color/blue" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/favorite"
                    android:foregroundGravity="bottom"
                    app:fabSize="normal"
                    android:backgroundTint="@color/white"
                    app:layout_anchorGravity="bottom|end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.907"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.818"
                    app:srcCompat="@drawable/ic_baseline_favorite" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>